[tool.poetry]
name = "ip-logger"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
aiogram = ">=3.21.0,<4.0.0"
cryptography = ">=45.0.6,<46.0.0"
uvicorn = ">=0.35.0,<0.36.0"
fastapi = ">=0.116.1,<0.117.0"
user-agents = ">=2.2.0,<3.0.0"
pytz = ">=2025.2,<2026.0"
httpx = ">=0.25.0,<1.0.0"
slowapi = "^0.1.9"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "main:start"